feat: add theme controller